# pjecz-casiopea-tramites-servicios-api

./: .dockerignore  .gcloudignore  .gitignore  Dockerfile  README.md  pyproject.toml
pjecz_casiopea_tramites_servicios_api/: main.py
pjecz_casiopea_tramites_servicios_api/config/: settings.py
pjecz_casiopea_tramites_servicios_api/dependencies/: AESEncryption.py  exceptions.py  safe_string.py  santander_web_pay_plus.py  universal_mixin.py
pjecz_casiopea_tramites_servicios_api/models/: autoridades.py  cit_clientes.py  distritos.py  pag_pagos.py  pag_tramites_servicios.py
pjecz_casiopea_tramites_servicios_api/routers/: autoridades.py  cit_clientes.py  distritos.py  pag_pagos.py  pag_tramites_servicios.py
pjecz_casiopea_tramites_servicios_api/schemas/: autoridades.py  cit_clientes.py  distritos.py  pag_pagos.py  pag_tramites_servicios.py
tests/: README.md  __init__.py  test_autoridades.py  test_cit_cliente.py  test_distritos.py  test_pag_pagos.py  test_pag_tramites_servicios.py
