[tool.poetry]
name = "pjecz-casiopea-tramites-servicios-api"
version = "0.1.0"
description = "API del Portal de Trámites y Servicios"
authors = ["Guillermo Valdes <guillermo@movimientolibre.com>"]
license = "AGPL3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.119.0"
fastapi-pagination = "^0.14.3"
gunicorn = "^23.0.0"
psycopg2-binary = "^2.9.11"
pydantic = "^2.12.2"
pydantic-settings = "^2.11.0"
pytz = "^2025.2"
sqlalchemy = "^2.0.44"
sqlalchemy-utils = "^0.42.0"
unidecode = "^1.4.0"
uvicorn = "^0.37.0"


[tool.poetry.group.dev.dependencies]
black = "^25.9.0"
isort = "^7.0.0"
pre-commit = "^4.3.0"
pylint = "^4.0.1"
pylint-sqlalchemy = "^0.3.0"
pytest = "^8.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 128

[tool.isort]
line_length = 128
profile = "black"
